Web page finish...

--- a/index.html
+++ b/index.html
@@ -30,12 +30,63 @@
             <div class="h_text">
                 <div class="h_title">Hero Title</div>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam possimus non excepturi consequuntur praesentium natus optio mollitia distinctio cumque! Incidunt aliquam nisi ipsa dolor repellat. Vitae quis voluptatem inventore. Beatae.</p>
-                <button class="rounded-button">Call to action!</button>
+                <button class="rounded-button">Sign up</button>
             </div>
             <div class="h_image">
                 <img src="palceholder_image.jpg" alt="no image">
             </div>
         </div>
     </div>
+    <div class="main">
+        <div class="info_title">
+            <h1>Some random information</h1>
+        </div>
+        <div class="info_cards">
+            <div class="info_image">
+                <button class="empty_box"></button>
+                <div class="info text">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem quae illo corporis, doloremque neque asperiores culpa quis laudantium odio, iure ex voluptatem magni tempore inventore dignissimos dolore, sed reprehenderit unde!</p>
+                </div>
+            </div>
+            <div class="info_image">
+                <button class="empty_box"></button>
+                <div class="info text">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem quae illo corporis, doloremque neque asperiores culpa quis laudantium odio, iure ex voluptatem magni tempore inventore dignissimos dolore, sed reprehenderit unde!</p>
+                </div>
+            </div>
+            <div class="info_image">
+                <button class="empty_box"></button>
+                <div class="info text">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem quae illo corporis, doloremque neque asperiores culpa quis laudantium odio, iure ex voluptatem magni tempore inventore dignissimos dolore, sed reprehenderit unde!</p>
+                </div>
+            </div>
+            <div class="info_image">
+                <button class="empty_box"></button>
+                <div class="info text">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem quae illo corporis, doloremque neque asperiores culpa quis laudantium odio, iure ex voluptatem magni tempore inventore dignissimos dolore, sed reprehenderit unde!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="quote">
+        <div class="text">
+            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias possimus error magnam aspernatur quos, blanditiis maiores aut corrupti rerum earum. Rerum, sapiente doloremque iste impedit explicabo reprehenderit incidunt iusto nesciunt!</p>
+            <div class="signature">- Mr. Lorem ipsum dolor sit</div>
+        </div>
+    </div>
+    <div class="call_action">
+        <div class="blue_box">
+            <div class="text">
+                <div class="action_title">Call to action! It's time!</div>
+                <div class="action_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui tempore perspiciatis illum laudantium tempora eius asperiores ullam necessitatibus expedita similique neque quia corrupti odit nulla, quisquam at animi dolores ea?</div>
+            </div>
+            <div class="action_button">
+                <button>Sign up</button>
+            </div>
+        </div>
+    </div>
+    <footer>
+            <p>Copyright - The Odin Project 2023</p>
+    </footer>
 </body>
 </html>
